Bug 490909 - "GenericName" is used instead of "Comment" when showing tooltips for apps in the start menu
Summary: "GenericName" is used instead of "Comment" when showing tooltips for apps in ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 6.1.3
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-28 00:55 UTC by EpicTux123
Modified: 2025-07-02 20:11 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description EpicTux123 2024-07-28 00:55:12 UTC
SUMMARY
When a .desktop file has both the fields "GenericName" and "Comment" with valid information, "GenericName" is used to show the tooltip in the start menu, when "Comment" should be used instead.

STEPS TO REPRODUCE
1. Create a .desktop file with the basics. For reference, I'll create an example:

============================================================================

/home/user/.local/share/applications/KDE Translator.desktop

[Desktop Entry]
Exec=/home/user/.local/bin/kdetranslator
Type=Application
Name=KDE Translator
GenericName=Translator application
Comment=Translate anything, from any language — from A to Z!

============================================================================

2. Update desktop database and open start menu and search the name of the app.

OBSERVED RESULT
"GenericName" is used as the tooltip for the app if both "GenericName" and "Comment" exist in the file. When only "Comment" exists, it is used instead of "GenericName".

EXPECTED RESULT
"Comment" should be prioritized, as I understand it (by reading https://specifications.freedesktop.org/desktop-entry-spec/desktop-entry-spec-latest.html).

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora Linux 40
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Comment 1 cwo 2024-07-28 08:08:56 UTC
Thanks for the bug report!

This only applies to kickoff, the default application launcher; kicker and kickerdash don't seem to have tooltips for applications at all (and maybe they should, but those should be filed as separate bugs). Moving to that product.
Comment 2 Nate Graham 2024-07-30 17:15:07 UTC
Can confirm. It actually does affect the shared code the powers the other widgets too, but their UIs don't expose it to the user.
Comment 3 Nate Graham 2024-07-31 22:05:29 UTC
I looked into this and it's a bit messy.

In plasma-workspace/applets/kicker/plugin/appentry.cpp, AppEntry::nameFromService() determines this string. Changing the logic path for "NameAndGenericName" to prefer Comment over GenericName isn't too hard, and I have a patch that does that.

The challenge is Kickoff. For its subtitle, Kickoff doesn't ask for NameAndGenericName, it asks for GenericName specifically. So we can't just change the text that GenericName returns, because then things will be wrong in contexts where we really do just want the generic name.
Comment 4 Nate Graham 2024-07-31 22:13:28 UTC
I can't figure out a clean way to fix this for Kickoff. Giving up for now.

If anyone wants to take over, the diff that will fix this for everything except Kickoff is:

> diff --git applets/kicker/plugin/appentry.cpp applets/kicker/plugin/appentry.cpp
> index 135d7fd895..940915fe48 100644
> --- applets/kicker/plugin/appentry.cpp
> +++ applets/kicker/plugin/appentry.cpp
> @@ -346,9 +346,10 @@ QString AppEntry::nameFromService(const KService::Ptr &service, NameFormat nameF
>  {
>      const QString &name = service->name();
>      QString genericName = service->genericName();
> +    QString comment = service->comment();
>  
>      if (genericName.isEmpty()) {
> -        genericName = service->comment();
> +        genericName = comment;
>      }
>  
>      if (nameFormat == NameOnly || genericName.isEmpty() || name == genericName) {
> @@ -356,7 +357,10 @@ QString AppEntry::nameFromService(const KService::Ptr &service, NameFormat nameF
>      } else if (nameFormat == GenericNameOnly) {
>          return genericName;
>      } else if (nameFormat == NameAndGenericName) {
> -        return i18nc("App name (Generic name)", "%1 (%2)", name, genericName);
> +        if (comment.isEmpty()) {
> +            comment = genericName;
> +        }
> +        return i18nc("App name (Comment or Generic name)", "%1 (%2)", name, comment);
>      } else {
>          return i18nc("Generic name (App name)", "%1 (%2)", genericName, name);
>      }
Comment 5 EpicTux123 2024-07-31 22:50:59 UTC
I was talking with a friend of mine and he said that showing "GenericName" instead of "Comment" may be an intentional design choice.

He compared the start menu of KDE with that of Windows XP (see https://www.cnet.com/a/img/resize/ec707a72eb90de389d687c335d3515183c1e21e2/hub/2011/09/20/2a7caa38-f0f2-11e2-8c7c-d4ae52e62bcc/winxpstartmenu.PNG?width=1200).

In comparison, Windows XP menu has a generic name in bold, and the tooltip is the name of the application.

Considering the Windows XP concept, it's valid the way it is on KDE now ("Name" as the most important, and "GenericName" as the tooltip).

However, we aren't Windows XP, and I personally prefer KDE's style.
About "GenericName" vs. "Comment", I think that comments generally better reflect the application's intentions, so that's why I filled the bug report.
Comment 6 Nate Graham 2024-08-01 15:44:59 UTC
Indeed, I suspect it was to copy Windows ages ago.

IMO there are only four states that really make sense:

- Name only
- Name and comment
- Generic name only
- Generic name and name

We already have three of these, just not #2.
Comment 7 Marco Martin 2024-09-02 14:44:09 UTC
(In reply to Nate Graham from comment #6)
> Indeed, I suspect it was to copy Windows ages ago.
> 
> IMO there are only four states that really make sense:
> 
> - Name only
> - Name and comment
> - Generic name only
> - Generic name and name
> 
> We already have three of these, just not #2.

right now kickoff doesn't have configuration for this at all, where would that be applied? when the icons are a grid for the tooltips?

while kicker has:

name only
description only
name (description)
description(name)

with the patch name(description) becomes name and comment, while otherwise "description" is always treated as "generic name"

i see some problems with that, both with the patch and without.

I think it would be a bit confusing to have the word "description" meaning 2 separate things depending on whetehr it comes before or after the name.

Also, i would really consider to change the kicker model to have name, generic name, and comment to be 3 separed roles from the model, and would be a task of the qml side of the applet to decide which of them to display. Maybe keeping the comment->generic name fallback but that's it
Comment 8 Marco Martin 2024-09-02 16:33:56 UTC
what would be considered as a fix for this? the patch pasted there + the same settings combobox in kicker copied over to kickoff?
Comment 9 Marco Martin 2024-09-17 11:24:27 UTC
Git commit bf417b29e79e645e67372b41976f5553fd358f7e by Marco Martin.
Committed on 17/09/2024 at 11:24.
Pushed by mart into branch 'master'.

Kickoff configurable whether we want names or generic names

Make possible also in kickoff to configure if we want only name
name and generic name, only generic name etc.

If we want only genericname or genericname(name) use the genericname key, otherwise as description use the comment key.

Depends from https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4679

M  +4    -0    applets/kickoff/package/contents/config/main.xml
M  +9    -2    applets/kickoff/package/contents/ui/AbstractKickoffItemDelegate.qml
M  +17   -0    applets/kickoff/package/contents/ui/ConfigGeneral.qml
M  +1    -0    applets/kickoff/package/contents/ui/KickoffGridDelegate.qml
M  +2    -1    applets/kickoff/package/contents/ui/KickoffListDelegate.qml
M  +1    -0    applets/kickoff/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/bf417b29e79e645e67372b41976f5553fd358f7e
Comment 10 Marco Martin 2024-09-17 11:24:35 UTC
Git commit ea6a8ccadb71a0045fce0e39687c1c7e00ae80af by Marco Martin.
Committed on 17/09/2024 at 11:24.
Pushed by mart into branch 'master'.

Use comment if name(description) is set

Make possible also in kickoff to configure if we want only name name and generic name, only generic name etc.

If we want only genericname or genericname(name) use the genericname key, otherwise as description use the comment key.

Depends from https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2497

M  +10   -0    applets/kicker/plugin/abstractentry.cpp
M  +2    -0    applets/kicker/plugin/abstractentry.h
M  +2    -0    applets/kicker/plugin/abstractmodel.cpp
M  +2    -0    applets/kicker/plugin/actionlist.h
M  +38   -7    applets/kicker/plugin/appentry.cpp
M  +3    -0    applets/kicker/plugin/appentry.h
M  +5    -0    applets/kicker/plugin/appsmodel.cpp
M  +9    -0    applets/kicker/plugin/kastatsfavoritesmodel.cpp
M  +4    -0    applets/kicker/plugin/simplefavoritesmodel.cpp
M  +2    -0    applets/kicker/plugin/systemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ea6a8ccadb71a0045fce0e39687c1c7e00ae80af
Comment 11 cwo 2024-09-24 21:48:05 UTC
I noticed that now there is an inconsistency in how things are displayed depending on whether a search is active or not. This is with "Name (Description)" setting, which I think is the default, and showing non-favorites as a list.

When you browse in Kickoff, you get the Name and Comment (e.g. for Filelight, title: "Filelight" Subtitle: "Show disk usage and delete unused files"). But when you search, you get Name and Generic Name (e.g. title: "Filelight" Subtitle: "Disk Usage Statistics").

Is this intentional or should this be changed to keep both the same?
Comment 12 Fushan Wen 2024-09-30 07:36:26 UTC
Git commit 9f1c3e8cd972dae828f39d5f732ac0887b1987f6 by Fushan Wen.
Committed on 30/09/2024 at 07:10.
Pushed by fusionfuture into branch 'Plasma/6.2'.

Use comment if name(description) is set

Make possible also in kickoff to configure if we want only name name and generic name, only generic name etc.

If we want only genericname or genericname(name) use the genericname key, otherwise as description use the comment key.

Depends from https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2497


(cherry picked from commit ea6a8ccadb71a0045fce0e39687c1c7e00ae80af)

82711948 Use comment if name(description) is set
d4c74725 new api, refreshlabels
b5a2a22d compactname can be description
80a202ca some sanity check on the magical property appNameFormat

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +10   -0    applets/kicker/plugin/abstractentry.cpp
M  +2    -0    applets/kicker/plugin/abstractentry.h
M  +2    -0    applets/kicker/plugin/abstractmodel.cpp
M  +2    -0    applets/kicker/plugin/actionlist.h
M  +38   -7    applets/kicker/plugin/appentry.cpp
M  +3    -0    applets/kicker/plugin/appentry.h
M  +5    -0    applets/kicker/plugin/appsmodel.cpp
M  +9    -0    applets/kicker/plugin/kastatsfavoritesmodel.cpp
M  +4    -0    applets/kicker/plugin/simplefavoritesmodel.cpp
M  +2    -0    applets/kicker/plugin/systemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/9f1c3e8cd972dae828f39d5f732ac0887b1987f6
Comment 13 equeim 2025-07-02 20:11:19 UTC
(In reply to cwo from comment #11)
> I noticed that now there is an inconsistency in how things are displayed
> depending on whether a search is active or not. This is with "Name
> (Description)" setting, which I think is the default, and showing
> non-favorites as a list.
> 
> When you browse in Kickoff, you get the Name and Comment (e.g. for
> Filelight, title: "Filelight" Subtitle: "Show disk usage and delete unused
> files"). But when you search, you get Name and Generic Name (e.g. title:
> "Filelight" Subtitle: "Disk Usage Statistics").
> 
> Is this intentional or should this be changed to keep both the same?

Yeah I've just noticed too.

Here is the code that determines app description in the app list:
https://invent.kde.org/plasma/plasma-workspace/-/blob/d15ee13d37ce11e6294f18876a171e7a7124f031/applets/kicker/appentry.cpp#L155

And here is how it's done when searching:
https://invent.kde.org/plasma/plasma-workspace/-/blob/d15ee13d37ce11e6294f18876a171e7a7124f031/runners/services/servicerunner.cpp#L165

As you can see they have opposite logic(In reply to cwo from comment #11)
> I noticed that now there is an inconsistency in how things are displayed
> depending on whether a search is active or not. This is with "Name
> (Description)" setting, which I think is the default, and showing
> non-favorites as a list.
> 
> When you browse in Kickoff, you get the Name and Comment (e.g. for
> Filelight, title: "Filelight" Subtitle: "Show disk usage and delete unused
> files"). But when you search, you get Name and Generic Name (e.g. title:
> "Filelight" Subtitle: "Disk Usage Statistics").
> 
> Is this intentional or should this be changed to keep both the same?

I've created a separate bug for this: https://bugs.kde.org/show_bug.cgi?id=506500