Use comment if name(description) is set

Make possible also in kickoff to configure if we want only name name and generic name, only generic name etc.

If we want only genericname or genericname(name) use the genericname key, otherwise as description use the comment key.

Depends from https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2497

BUG:490909