applets/kicker/plugin/systemmodel.cpp
@@ -43,6 +43,8 @@ QVariant SystemModel::data(const QModelIndex &index, int role) const
         return entry->name();
     } else if (role == Qt::DecorationRole) {
         return entry->iconName();
+    } else if (role == Kicker::CompactNameRole) {
+        return entry->compactName();
     } else if (role == Kicker::DescriptionRole) {
         return entry->description();
     } else if (role == Kicker::GroupRole) {
